--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
 
 <p>Although <strong>atto</strong> is 50 times faster now than version 0.1, it’s still not the fastest parsing lib on the block. If you have a need for speed and don’t need incremental parsing you might checkout FastParse or Parboiled2. But for “everyday” parsing where you just have to turn user input into something useful, <strong>atto</strong> is a friendly little library to use.</p>
 
+<h3 id="support">Support</h3>
+
+<ul>
+  <li>Chat it up on <a href="https://gitter.im/tpolecat/atto">Gitter</a>.</li>
+  <li>Check the new <a href="/atto/docs/">documentation</a>.</li>
+</ul>
+
 <h3 id="history-and-contributors">History and Contributors</h3>
 
 <p>The core of <strong>atto</strong> originated in Edward Kmett’s Scala port of <a href="https://github.com/bos/attoparsec">Attoparsec</a>. This library is an elaboration maintained by @tpolecat with contributions from some <a href="https://github.com/tpolecat/atto/graphs/contributors">very helpful folks</a>. Feedback and suggestions are always welcome.</p>
